# necku_web_service

./: .gitignore  build_container.sh  debug.sh  deploy_cpp_lib.sh  getpid.sh  login_container.sh  run.sh  run_app.sh  start_container.sh  stop_container.sh
cpp_lib/: .gitignore  CMakeLists.txt  conanfile.py
cpp_lib/include/: demo_NativeInterface.h
cpp_lib/src/: demo_NativeInterface.cpp
docker/: Dockerfile
java_web_service/: .gitignore  pom.xml
java_web_service/src/main/java/demo/: NativeInterface.java  RandomWebService.java  WebServiceRunner.java
java_web_service/src/main/java/trading/: RandomWebService.java  WebServiceRunner.java
market_connection/: .gitignore  CMakeLists.txt  conanfile.py
market_connection/include/: trading_MarketChannelImpl.h
market_connection/src/: CMakeLists.txt  generic_rest_request.cpp  generic_rest_request.h  io_context.cpp  io_context.h  rest_request_types.h  rest_requests.cpp  rest_requests.h  rest_requests.hpp  root_certificates.hpp  trading_MarketChannelImpl.cpp  utilities.h  websocket_stream.cpp  websocket_stream.h
market_connection/test/: CMakeLists.txt  conanfile.py
market_connection/test/src/: example_asio_tcp.cpp  main.cpp  prototype_whatever.cpp  utilities.h
market_connection/test_package/: CMakeLists.txt  conanfile.py
market_connection/test_package/src/: example.cpp
trading_application/: .gitignore  debug.sh  pom.xml  run.sh
trading_application/src/main/java/trading/: MarketChannel.java  MarketChannelImpl.java  SpringBootRunner.java  TradingApplication.java
