cmake_minimum_required(VERSION 3.8)
project(market_connection CXX)

find_package(JNI 1.8 REQUIRED)
find_package(Boost 1.71 REQUIRED)
find_package(OpenSSL 1.1 REQUIRED)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CXX_STANDARD "C++17")
SET(CMAKE_VERBOSE_MAKEFILE True)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

add_subdirectory(src)

